tests/ui/reborrow/custom_marker_mut_field_borrow.stderr
error[E0502]: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/custom_marker_mut_field_borrow.rs:14:20
   |
LL |     let x = &a.0;
   |             ---- immutable borrow occurs here
LL |     let y = method(a);
   |                    ^ mutable borrow occurs here
LL |
LL |     let _ = (x, y);
   |              - immutable borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
